crates/aiken-lang/src/tests/snapshots/format_pipe_fn.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn foo() {\n  outputs\n    |> list.any(\n    fn(output) { value.quantity_of(output.value, policy_id, asset_name) == 1 },\n  )\n}\n"
---
fn foo() {
  outputs
    |> list.any(
         fn(output) {
           value.quantity_of(output.value, policy_id, asset_name) == 1
         },
       )
}

