crates/aiken-lang/src/tests/snapshots/format_pipes_and_expressions.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\ntest fmt() {\n  (x == y) && ((z |> length()) == x)\n}\n"
---
test fmt() {
  x == y && ( z |> length() ) == x
}

