crates/aiken-lang/src/tests/snapshots/format_preserve_newline_after_bool_expect.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn foo() {\n  expect 1 == 1\n\n  False\n}\n"
---
fn foo() {
  expect 1 == 1

  False
}

