crates/aiken-lang/src/tests/snapshots/format_preserve_punning.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn label() -> Void {\n  let thing = Input { ..base, output_reference }\n  let thing = Input { output_reference }\n}"
---
fn label() -> Void {
  let thing = Input { ..base, output_reference }
  let thing = Input { output_reference }
}
