crates/aiken-lang/src/tests/snapshots/format_simple_module.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn smth() { let a = foo.Foo { bar: 1 } }\n"
---
fn smth() {
  let a = foo.Foo { bar: 1 }
}

