crates/aiken-lang/src/tests/snapshots/format_trace_callback.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nfn foo() {\n  list.any([], fn (e) { trace @\"foo\"\n    e\n  })\n}\n"
---
fn foo() {
  list.any(
    [],
    fn(e) {
      trace @"foo"
      e
    },
  )
}

