crates/aiken-lang/src/tests/snapshots/format_unicode.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\n/// ∞ ★ ♩ ♫ ✓\nfn foo() {\n  trace @\"∀💩\"\n  Void\n}\n"
---
/// ∞ ★ ♩ ♫ ✓
fn foo() {
  trace @"∀💩"
  Void
}

